<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/Pictures"
        android:layout_width="99dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:text="@string/pictures"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/images"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@+id/Pictures"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#eeeeee"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="264dp"
        android:layout_height="48dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="78dp"
        android:text="@string/load_the_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/images" />

    <Button
        android:id="@+id/button2"
        android:layout_width="265dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="225dp"
        android:text="@string/edit_the_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>